RA: 2.  Router, App Layout, i18n, eslint, stylelint, jest: Stylelint. Plugin for i18next: lesson_19

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,7 +7,7 @@
     {
       "files": "src/**/*.scss",
       "options": {
-        "singleQuote": true,
+        "singleQuote": false,
         "tabWidth": 2
       }
     }
