--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "module": "CommonJS"
     }
   },
-  "include": ["src/**/*", ".eslintrc.js"],
+  "include": ["src/**/*", ".eslintrc.js", "config/jest/jest.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
