--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "unit": "jest  --config ./config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
-    "build-storybook": "storybook build -c ./config/.storybook"
+    "build-storybook": "storybook build -c ./config/.storybook",
+    "chromatic": "npx chromatic --project-token=chpt_189b3730b904036"
   },
   "keywords": [],
   "author": "",
@@ -46,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
+    "chromatic": "^11.7.1",
     "css-loader": "^6.6.0",
     "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
