--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:ts": "eslint  \"src/**/*.{ts,tsx}\"",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "unit": "jest  --config ./config/jest/jest.config.ts",
+    "test:unit": "jest  --config ./config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
     "build-storybook": "storybook build -c ./config/.storybook",
     "chromatic": "npx chromatic --project-token=chpt_189b3730b904036"
