RA: 4. Custom Input. Login window. Lazy modal LABEL: lesson_32

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
       "module": "CommonJS"
     }
   },
-  "include": ["src/**/*", ".eslintrc.js", "config/**/*", "config/jest/setupTest.ts"],
+  "include": [
+    "src/**/*",
+    ".eslintrc.js",
+    "config/**/*",
+    "config/jest/setupTest.ts",
+    "json-server/**/*"
+  ],
   "exclude": ["node_modules", "dist"]
 }
