--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "stylelint-config-standard-scss",
   "rules": {
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "declaration-empty-line-before": null,
+    "scss/double-slash-comment-empty-line-before": null
   }
 }
