--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,54 @@
 #       # - name: screenshot testing
 #       #   run: npm run chromatic
 
-name: linting, testing, building and deployment
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+# name: linting, testing, building and deployment
+# run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+# on:
+#   push:
+#     branches: [master]
+#   pull_request:
+#     branches: [master]
+
+# permissions:
+#   contents: write
+
+# jobs:
+#   pipeline:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         node-version: [18.x]
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Staring Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#       - name: install modules
+#         run: npm install --legacy-peer-deps
+#       - name: build production project
+#         run: npm run build:prod
+#         if: always()
+#       - name: linting typescript
+#         run: npm run lint:ts
+#         if: always()
+#       - name: linting css
+#         run: npm run lint:scss
+#         if: always()
+#       - name: unit testing
+#         run: npm run test:unit
+#         if: always()
+#       - name: build storybook
+#         run: npm run build-storybook
+#         if: always()
+#       - name: Deploy
+#         uses: JamesIves/github-pages-deploy-action@v4
+#         with:
+#           folder: dist
+#           branch: gh-pages
+#           clean: true # очищать старые файлы
+
+name: Build and Deploy
 on:
   push:
     branches: [master]
@@ -48,87 +94,28 @@ permissions:
   contents: write
 
 jobs:
-  pipeline:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
     steps:
-      - uses: actions/checkout@v2
-      - name: Staring Node.js ${{ matrix.node-version }}
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: install modules
+          node-version: 18.x
+
+      - name: Install dependencies 📦
         run: npm install --legacy-peer-deps
-      - name: build production project
+
+      - name: Build 🔧
         run: npm run build:prod
-        if: always()
-      - name: linting typescript
-        run: npm run lint:ts
-        if: always()
-      - name: linting css
-        run: npm run lint:scss
-        if: always()
-      - name: unit testing
-        run: npm run test:unit
-        if: always()
-      - name: build storybook
-        run: npm run build-storybook
-        if: always()
-      - name: Deploy
+        env:
+          NODE_ENV: production
+
+      - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
-          branch: gh-pages
+          folder: dist # папка, откуда будет происходить деплой
+          branch: gh-pages # ветка, куда будет делаться деплой
           clean: true # очищать старые файлы
-
-# name: Deploy React App to GitHub Pages
-# run-name: ${{ github.actor }} is deploying to GitHub Pages 🚀
-# on:
-#   push:
-#     branches: [master]
-#   pull_request:
-#     branches: [master]
-
-# permissions:
-#   contents: write
-#   pages: write
-#   id-token: write
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-#     environment:
-#       name: github-pages
-#       url: ${{ steps.deployment.outputs.page_url }}
-#     strategy:
-#       matrix:
-#         node-version: [18.x]
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Staring Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#       - name: Install modules
-#         run: npm install --legacy-peer-deps
-#       - name: Build production project
-#         run: npm run build:prod
-#       - name: Linting typescript
-#         run: npm run lint:ts
-#         if: always()
-#       - name: Linting css
-#         run: npm run lint:scss
-#         if: always()
-#       - name: Unit testing
-#         run: npm run test:unit
-#         if: always()
-#       - name: Build storybook
-#         run: npm run build-storybook
-#         if: always()
-#       - name: Deploy to GitHub Pages
-#         uses: JamesIves/github-pages-deploy-action@v4
-#         with:
-#           folder: dist # Убедитесь, что это соответствует вашей папке сборки
-#           branch: gh-pages
