--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
-    "build:prod": "webpack  --env mode=production",
+    "build:prod": "webpack  --env mode=production apiUrl=https://react-advanced-server.vercel.app",
     "build:dev": "webpack  --env mode=development",
     "lint:ts": "eslint  \"src/**/*.{ts,tsx}\"",
     "lint:scss": "npx stylelint \"**/*.scss\"",
