--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-reactadv": "^0.0.2",
     "eslint-plugin-storybook": "^0.8.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
