--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
     ".eslintrc.js",
     "config/**/*",
     "config/jest/setupTest.ts",
-    "json-server/**/*"
+    "json-server/**/*",
+    "scripts/**/*",
+    "webpack.config.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
