--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.1",
+    "jest-html-reporters": "^3.0.10",
     "json-server": "^0.17.0",
     "mini-css-extract-plugin": "^2.5.3",
     "regenerator-runtime": "^0.13.9",
