--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@types/circular-dependency-plugin": "^5.0.8",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^18.2.0",
@@ -53,6 +54,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "chromatic": "^11.7.1",
+    "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^6.6.0",
     "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
