--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-reactadv": "^0.0.2",
     "eslint-plugin-storybook": "^0.8.0",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.1",
