RA: 12. Setting up Vite. Quick build for dev, lesson_85

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack  --env mode=production apiUrl=https://react-advanced-server.vercel.app",
     "build:dev": "webpack  --env mode=development",
@@ -51,6 +53,7 @@
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "chromatic": "^11.7.1",
@@ -86,6 +89,8 @@
     "ts-morph": "^25.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
+    "vite": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.1",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
@@ -94,9 +99,10 @@
   "dependencies": {
     "@headlessui/react": "1.7",
     "@react-spring/web": "^9.5.2",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "@use-gesture/react": "^10.2.19",
     "axios": "^0.26.1",
+    "caniuse-lite": "^1.0.30001702",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "i18next": "^21.9.0",
