--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "chromatic": "^11.7.1",
@@ -77,11 +77,13 @@
     "jest-html-reporters": "^3.0.10",
     "json-server": "^0.17.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "redux": "^5.0.1",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook": "^8.2.9",
     "storybook-addon-mock": "^5.0.0",
+    "storybook-addon-themes": "^6.1.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
@@ -89,7 +91,7 @@
     "ts-morph": "^25.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "vite": "^3.1.0",
+    "vite": "^6.2.2",
     "vite-plugin-svgr": "^2.2.1",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
@@ -101,7 +103,7 @@
     "@react-spring/web": "^9.5.2",
     "@reduxjs/toolkit": "^2.6.0",
     "@use-gesture/react": "^10.2.19",
-    "axios": "^0.26.1",
+    "axios": "^1.8.4",
     "caniuse-lite": "^1.0.30001702",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
