--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,4 +1,9 @@
 # Browser that we support
+[production]
 defaults
 not IE 11
-not dead
+
+[development]
+last 2 Chrome versions
+last 2 Firefox versions
+last 2 Safari versions
