--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "chromatic": "npx chromatic --project-token=chpt_189b3730b904036",
     "generate:slice": "node ./scripts/createSlice/index.js"
   },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "eslint"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -76,6 +79,7 @@
     "jest": "^27.4.1",
     "jest-html-reporters": "^3.0.10",
     "json-server": "^0.17.0",
+    "lint-staged": "^15.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "redux": "^5.0.1",
     "regenerator-runtime": "^0.13.9",
