--- a/package.json
+++ b/package.json
@@ -119,7 +119,6 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.2.1",
-    "react-virtualized": "^9.22.5"
+    "react-router-dom": "^6.2.1"
   }
 }
