--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest  --config ./config/jest/jest.config.ts",
+    "test:e2e": "cypress open",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
     "build-storybook": "storybook build -c ./config/.storybook",
     "chromatic": "npx chromatic --project-token=chpt_189b3730b904036",
@@ -111,6 +112,7 @@
     "caniuse-lite": "^1.0.30001702",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
+    "cypress": "^14.3.0",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
