--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -5,8 +5,8 @@
     "sourceMap": true,
     "types": ["cypress", "node"],
     "allowJs": true,
-    "isolatedModules": true
+    "isolatedModules": false
   },
-  "exclude": ["../tsconfig.json"],
+  "extends": "../tsconfig.json",
   "include": ["**/*.ts"]
 }
